ENYO-3336: remove translatY style for title component Issue: In case of title is very long, feedback control on right side is overlapped by title
Fix:
Remove translateY style

--- a/src/VideoPlayer/VideoPlayer.less
+++ b/src/VideoPlayer/VideoPlayer.less
@@ -41,12 +41,7 @@
 			font-size: 48px;
 			line-height: @moon-header-line-height;
 			transition: @badges-present-transition;
-			transform: translateY(36px) translateZ(0);
 			.font-kerning;
-
-			&.with-badges {
-				transform: translateY(0) translateZ(0);
-			}
 
 			.enyo-locale-non-latin & {
 				line-height: @moon-non-latin-header-text-line-height;
